--- a/03_Naive_Bayesian_Classifiers.ipynb
+++ b/03_Naive_Bayesian_Classifiers.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -84,21 +84,8 @@
       "[2 1 0 2 0 2 0 1 1 1 2 1 1 1 1 0 1 1 0 0 2 1 0 0 2 0 0 1 1 0 2 1 0 2 2 1 0\n",
       " 1 1 1 2 0 2 0 0 1 2 2 2 2 1 2 1 1 2 2 2 2 1 2 1 0 2 1 1 1 1 2 0 0 2 1 0 0\n",
       " 1]\n",
-      "accuracy score: 0.9466666666666667\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Target is multiclass but average='binary'. Please choose another average setting.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-dc677501c9b5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"accuracy score: {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpreds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"f1 score: {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf1_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpreds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py\u001b[0m in \u001b[0;36mf1_score\u001b[1;34m(y_true, y_pred, labels, pos_label, average, sample_weight)\u001b[0m\n\u001b[0;32m    712\u001b[0m     return fbeta_score(y_true, y_pred, 1, labels=labels,\n\u001b[0;32m    713\u001b[0m                        \u001b[0mpos_label\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpos_label\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maverage\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 714\u001b[1;33m                        sample_weight=sample_weight)\n\u001b[0m\u001b[0;32m    715\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    716\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py\u001b[0m in \u001b[0;36mfbeta_score\u001b[1;34m(y_true, y_pred, beta, labels, pos_label, average, sample_weight)\u001b[0m\n\u001b[0;32m    826\u001b[0m                                                  \u001b[0maverage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maverage\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    827\u001b[0m                                                  \u001b[0mwarn_for\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'f-score'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 828\u001b[1;33m                                                  sample_weight=sample_weight)\n\u001b[0m\u001b[0;32m    829\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    830\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py\u001b[0m in \u001b[0;36mprecision_recall_fscore_support\u001b[1;34m(y_true, y_pred, beta, labels, pos_label, average, warn_for, sample_weight)\u001b[0m\n\u001b[0;32m   1038\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1039\u001b[0m             raise ValueError(\"Target is %s but average='binary'. Please \"\n\u001b[1;32m-> 1040\u001b[1;33m                              \"choose another average setting.\" % y_type)\n\u001b[0m\u001b[0;32m   1041\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mpos_label\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1042\u001b[0m         warnings.warn(\"Note that pos_label (set to %r) is ignored when \"\n",
-      "\u001b[1;31mValueError\u001b[0m: Target is multiclass but average='binary'. Please choose another average setting."
+      "accuracy score: 0.9466666666666667\n",
+      "f1 score: [ 1.          0.93548387  0.91304348]\n"
      ]
     }
    ],
@@ -131,8 +118,7 @@
     "print(preds)\n",
     "print(y_test)\n",
     "print(\"accuracy score: {}\".format(accuracy_score(y_test, preds)))\n",
-    "print(\"f1 score: {}\".format(f1_score(y_test, preds)))\n",
-    "data"
+    "print(\"f1 score: {}\".format(f1_score(y_test, preds, average=None)))\n"
    ]
   },
   {
@@ -172,15 +158,795 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "29.0\n",
+      "0.0\n",
+      "23.0\n",
+      "35.0\n",
+      "0.0\n",
+      "32.0\n",
+      "0.0\n",
+      "45.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "23.0\n",
+      "19.0\n",
+      "0.0\n",
+      "47.0\n",
+      "0.0\n",
+      "38.0\n",
+      "30.0\n",
+      "41.0\n",
+      "0.0\n",
+      "0.0\n",
+      "35.0\n",
+      "33.0\n",
+      "26.0\n",
+      "0.0\n",
+      "15.0\n",
+      "19.0\n",
+      "0.0\n",
+      "26.0\n",
+      "36.0\n",
+      "11.0\n",
+      "0.0\n",
+      "31.0\n",
+      "33.0\n",
+      "0.0\n",
+      "37.0\n",
+      "42.0\n",
+      "47.0\n",
+      "25.0\n",
+      "0.0\n",
+      "18.0\n",
+      "24.0\n",
+      "0.0\n",
+      "39.0\n",
+      "0.0\n",
+      "27.0\n",
+      "32.0\n",
+      "0.0\n",
+      "11.0\n",
+      "15.0\n",
+      "21.0\n",
+      "34.0\n",
+      "42.0\n",
+      "10.0\n",
+      "39.0\n",
+      "60.0\n",
+      "0.0\n",
+      "41.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "34.0\n",
+      "0.0\n",
+      "27.0\n",
+      "30.0\n",
+      "0.0\n",
+      "13.0\n",
+      "27.0\n",
+      "20.0\n",
+      "35.0\n",
+      "0.0\n",
+      "20.0\n",
+      "30.0\n",
+      "20.0\n",
+      "0.0\n",
+      "33.0\n",
+      "0.0\n",
+      "22.0\n",
+      "13.0\n",
+      "0.0\n",
+      "26.0\n",
+      "28.0\n",
+      "0.0\n",
+      "29.0\n",
+      "54.0\n",
+      "25.0\n",
+      "32.0\n",
+      "19.0\n",
+      "0.0\n",
+      "15.0\n",
+      "40.0\n",
+      "0.0\n",
+      "18.0\n",
+      "27.0\n",
+      "28.0\n",
+      "18.0\n",
+      "30.0\n",
+      "51.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "18.0\n",
+      "0.0\n",
+      "29.0\n",
+      "0.0\n",
+      "28.0\n",
+      "31.0\n",
+      "25.0\n",
+      "33.0\n",
+      "26.0\n",
+      "34.0\n",
+      "0.0\n",
+      "32.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "23.0\n",
+      "15.0\n",
+      "56.0\n",
+      "39.0\n",
+      "30.0\n",
+      "0.0\n",
+      "0.0\n",
+      "42.0\n",
+      "30.0\n",
+      "36.0\n",
+      "24.0\n",
+      "0.0\n",
+      "14.0\n",
+      "0.0\n",
+      "37.0\n",
+      "31.0\n",
+      "13.0\n",
+      "20.0\n",
+      "26.0\n",
+      "25.0\n",
+      "0.0\n",
+      "29.0\n",
+      "0.0\n",
+      "30.0\n",
+      "26.0\n",
+      "0.0\n",
+      "31.0\n",
+      "23.0\n",
+      "37.0\n",
+      "35.0\n",
+      "0.0\n",
+      "17.0\n",
+      "50.0\n",
+      "0.0\n",
+      "28.0\n",
+      "42.0\n",
+      "0.0\n",
+      "44.0\n",
+      "15.0\n",
+      "21.0\n",
+      "19.0\n",
+      "41.0\n",
+      "38.0\n",
+      "40.0\n",
+      "34.0\n",
+      "23.0\n",
+      "0.0\n",
+      "18.0\n",
+      "25.0\n",
+      "0.0\n",
+      "0.0\n",
+      "12.0\n",
+      "0.0\n",
+      "23.0\n",
+      "23.0\n",
+      "42.0\n",
+      "24.0\n",
+      "42.0\n",
+      "0.0\n",
+      "46.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "18.0\n",
+      "20.0\n",
+      "0.0\n",
+      "0.0\n",
+      "28.0\n",
+      "36.0\n",
+      "41.0\n",
+      "39.0\n",
+      "35.0\n",
+      "0.0\n",
+      "44.0\n",
+      "0.0\n",
+      "0.0\n",
+      "20.0\n",
+      "41.0\n",
+      "0.0\n",
+      "13.0\n",
+      "44.0\n",
+      "27.0\n",
+      "16.0\n",
+      "0.0\n",
+      "20.0\n",
+      "16.0\n",
+      "32.0\n",
+      "28.0\n",
+      "29.0\n",
+      "0.0\n",
+      "27.0\n",
+      "33.0\n",
+      "22.0\n",
+      "54.0\n",
+      "31.0\n",
+      "26.0\n",
+      "32.0\n",
+      "40.0\n",
+      "41.0\n",
+      "30.0\n",
+      "22.0\n",
+      "0.0\n",
+      "29.0\n",
+      "0.0\n",
+      "0.0\n",
+      "33.0\n",
+      "15.0\n",
+      "27.0\n",
+      "0.0\n",
+      "38.0\n",
+      "39.0\n",
+      "31.0\n",
+      "0.0\n",
+      "37.0\n",
+      "25.0\n",
+      "0.0\n",
+      "28.0\n",
+      "0.0\n",
+      "21.0\n",
+      "27.0\n",
+      "21.0\n",
+      "0.0\n",
+      "24.0\n",
+      "32.0\n",
+      "0.0\n",
+      "22.0\n",
+      "35.0\n",
+      "15.0\n",
+      "0.0\n",
+      "33.0\n",
+      "33.0\n",
+      "19.0\n",
+      "0.0\n",
+      "0.0\n",
+      "14.0\n",
+      "32.0\n",
+      "7.0\n",
+      "35.0\n",
+      "39.0\n",
+      "22.0\n",
+      "16.0\n",
+      "28.0\n",
+      "15.0\n",
+      "0.0\n",
+      "32.0\n",
+      "15.0\n",
+      "0.0\n",
+      "18.0\n",
+      "0.0\n",
+      "42.0\n",
+      "0.0\n",
+      "0.0\n",
+      "37.0\n",
+      "32.0\n",
+      "0.0\n",
+      "50.0\n",
+      "0.0\n",
+      "52.0\n",
+      "24.0\n",
+      "23.0\n",
+      "0.0\n",
+      "10.0\n",
+      "0.0\n",
+      "28.0\n",
+      "15.0\n",
+      "0.0\n",
+      "0.0\n",
+      "26.0\n",
+      "44.0\n",
+      "39.0\n",
+      "17.0\n",
+      "43.0\n",
+      "29.0\n",
+      "30.0\n",
+      "37.0\n",
+      "45.0\n",
+      "0.0\n",
+      "31.0\n",
+      "38.0\n",
+      "29.0\n",
+      "25.0\n",
+      "0.0\n",
+      "0.0\n",
+      "33.0\n",
+      "41.0\n",
+      "0.0\n",
+      "0.0\n",
+      "37.0\n",
+      "23.0\n",
+      "14.0\n",
+      "19.0\n",
+      "28.0\n",
+      "30.0\n",
+      "37.0\n",
+      "17.0\n",
+      "10.0\n",
+      "31.0\n",
+      "22.0\n",
+      "11.0\n",
+      "0.0\n",
+      "39.0\n",
+      "0.0\n",
+      "12.0\n",
+      "30.0\n",
+      "20.0\n",
+      "33.0\n",
+      "32.0\n",
+      "21.0\n",
+      "32.0\n",
+      "0.0\n",
+      "36.0\n",
+      "32.0\n",
+      "19.0\n",
+      "16.0\n",
+      "0.0\n",
+      "0.0\n",
+      "18.0\n",
+      "43.0\n",
+      "0.0\n",
+      "0.0\n",
+      "34.0\n",
+      "0.0\n",
+      "13.0\n",
+      "21.0\n",
+      "35.0\n",
+      "0.0\n",
+      "0.0\n",
+      "36.0\n",
+      "19.0\n",
+      "0.0\n",
+      "19.0\n",
+      "32.0\n",
+      "0.0\n",
+      "0.0\n",
+      "28.0\n",
+      "12.0\n",
+      "0.0\n",
+      "0.0\n",
+      "40.0\n",
+      "30.0\n",
+      "40.0\n",
+      "36.0\n",
+      "33.0\n",
+      "0.0\n",
+      "37.0\n",
+      "0.0\n",
+      "25.0\n",
+      "28.0\n",
+      "0.0\n",
+      "17.0\n",
+      "16.0\n",
+      "28.0\n",
+      "48.0\n",
+      "23.0\n",
+      "22.0\n",
+      "40.0\n",
+      "43.0\n",
+      "43.0\n",
+      "15.0\n",
+      "37.0\n",
+      "0.0\n",
+      "39.0\n",
+      "30.0\n",
+      "22.0\n",
+      "8.0\n",
+      "18.0\n",
+      "24.0\n",
+      "13.0\n",
+      "29.0\n",
+      "36.0\n",
+      "26.0\n",
+      "23.0\n",
+      "29.0\n",
+      "0.0\n",
+      "14.0\n",
+      "12.0\n",
+      "0.0\n",
+      "24.0\n",
+      "34.0\n",
+      "40.0\n",
+      "0.0\n",
+      "31.0\n",
+      "0.0\n",
+      "0.0\n",
+      "41.0\n",
+      "25.0\n",
+      "0.0\n",
+      "32.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "49.0\n",
+      "39.0\n",
+      "30.0\n",
+      "23.0\n",
+      "22.0\n",
+      "35.0\n",
+      "33.0\n",
+      "21.0\n",
+      "32.0\n",
+      "0.0\n",
+      "29.0\n",
+      "41.0\n",
+      "18.0\n",
+      "46.0\n",
+      "22.0\n",
+      "32.0\n",
+      "39.0\n",
+      "0.0\n",
+      "30.0\n",
+      "46.0\n",
+      "25.0\n",
+      "0.0\n",
+      "16.0\n",
+      "11.0\n",
+      "0.0\n",
+      "8.0\n",
+      "0.0\n",
+      "33.0\n",
+      "0.0\n",
+      "15.0\n",
+      "0.0\n",
+      "25.0\n",
+      "23.0\n",
+      "27.0\n",
+      "0.0\n",
+      "12.0\n",
+      "63.0\n",
+      "12.0\n",
+      "45.0\n",
+      "37.0\n",
+      "18.0\n",
+      "13.0\n",
+      "0.0\n",
+      "32.0\n",
+      "0.0\n",
+      "28.0\n",
+      "30.0\n",
+      "0.0\n",
+      "28.0\n",
+      "48.0\n",
+      "33.0\n",
+      "22.0\n",
+      "0.0\n",
+      "40.0\n",
+      "30.0\n",
+      "0.0\n",
+      "13.0\n",
+      "10.0\n",
+      "36.0\n",
+      "0.0\n",
+      "41.0\n",
+      "40.0\n",
+      "38.0\n",
+      "27.0\n",
+      "0.0\n",
+      "0.0\n",
+      "27.0\n",
+      "45.0\n",
+      "17.0\n",
+      "38.0\n",
+      "31.0\n",
+      "30.0\n",
+      "37.0\n",
+      "22.0\n",
+      "31.0\n",
+      "0.0\n",
+      "42.0\n",
+      "41.0\n",
+      "32.0\n",
+      "17.0\n",
+      "0.0\n",
+      "28.0\n",
+      "30.0\n",
+      "38.0\n",
+      "18.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "15.0\n",
+      "33.0\n",
+      "32.0\n",
+      "19.0\n",
+      "32.0\n",
+      "41.0\n",
+      "25.0\n",
+      "39.0\n",
+      "0.0\n",
+      "26.0\n",
+      "23.0\n",
+      "23.0\n",
+      "0.0\n",
+      "31.0\n",
+      "17.0\n",
+      "0.0\n",
+      "0.0\n",
+      "19.0\n",
+      "18.0\n",
+      "34.0\n",
+      "0.0\n",
+      "0.0\n",
+      "7.0\n",
+      "32.0\n",
+      "33.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "18.0\n",
+      "19.0\n",
+      "15.0\n",
+      "31.0\n",
+      "0.0\n",
+      "18.0\n",
+      "0.0\n",
+      "52.0\n",
+      "0.0\n",
+      "30.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "37.0\n",
+      "49.0\n",
+      "40.0\n",
+      "25.0\n",
+      "32.0\n",
+      "23.0\n",
+      "29.0\n",
+      "35.0\n",
+      "27.0\n",
+      "21.0\n",
+      "43.0\n",
+      "31.0\n",
+      "28.0\n",
+      "30.0\n",
+      "0.0\n",
+      "24.0\n",
+      "23.0\n",
+      "33.0\n",
+      "40.0\n",
+      "0.0\n",
+      "40.0\n",
+      "0.0\n",
+      "0.0\n",
+      "32.0\n",
+      "34.0\n",
+      "19.0\n",
+      "0.0\n",
+      "14.0\n",
+      "30.0\n",
+      "32.0\n",
+      "29.0\n",
+      "30.0\n",
+      "0.0\n",
+      "0.0\n",
+      "31.0\n",
+      "17.0\n",
+      "30.0\n",
+      "47.0\n",
+      "20.0\n",
+      "0.0\n",
+      "0.0\n",
+      "99.0\n",
+      "46.0\n",
+      "27.0\n",
+      "17.0\n",
+      "0.0\n",
+      "24.0\n",
+      "11.0\n",
+      "0.0\n",
+      "0.0\n",
+      "27.0\n",
+      "0.0\n",
+      "40.0\n",
+      "50.0\n",
+      "0.0\n",
+      "22.0\n",
+      "45.0\n",
+      "14.0\n",
+      "0.0\n",
+      "19.0\n",
+      "0.0\n",
+      "18.0\n",
+      "19.0\n",
+      "0.0\n",
+      "36.0\n",
+      "29.0\n",
+      "0.0\n",
+      "32.0\n",
+      "42.0\n",
+      "25.0\n",
+      "39.0\n",
+      "13.0\n",
+      "21.0\n",
+      "22.0\n",
+      "42.0\n",
+      "28.0\n",
+      "26.0\n",
+      "0.0\n",
+      "0.0\n",
+      "13.0\n",
+      "24.0\n",
+      "0.0\n",
+      "42.0\n",
+      "20.0\n",
+      "0.0\n",
+      "27.0\n",
+      "0.0\n",
+      "47.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "22.0\n",
+      "0.0\n",
+      "40.0\n",
+      "0.0\n",
+      "17.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "18.0\n",
+      "32.0\n",
+      "12.0\n",
+      "17.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "30.0\n",
+      "35.0\n",
+      "17.0\n",
+      "36.0\n",
+      "35.0\n",
+      "25.0\n",
+      "25.0\n",
+      "23.0\n",
+      "40.0\n",
+      "0.0\n",
+      "28.0\n",
+      "27.0\n",
+      "35.0\n",
+      "48.0\n",
+      "0.0\n",
+      "31.0\n",
+      "0.0\n",
+      "43.0\n",
+      "46.0\n",
+      "46.0\n",
+      "39.0\n",
+      "45.0\n",
+      "18.0\n",
+      "27.0\n",
+      "33.0\n",
+      "30.0\n",
+      "26.0\n",
+      "10.0\n",
+      "23.0\n",
+      "35.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "17.0\n",
+      "28.0\n",
+      "36.0\n",
+      "39.0\n",
+      "0.0\n",
+      "0.0\n",
+      "26.0\n",
+      "0.0\n",
+      "19.0\n",
+      "26.0\n",
+      "46.0\n",
+      "0.0\n",
+      "0.0\n",
+      "32.0\n",
+      "49.0\n",
+      "0.0\n",
+      "24.0\n",
+      "19.0\n",
+      "0.0\n",
+      "11.0\n",
+      "0.0\n",
+      "27.0\n",
+      "31.0\n",
+      "29.0\n",
+      "0.0\n",
+      "20.0\n",
+      "36.0\n",
+      "0.0\n",
+      "21.0\n",
+      "0.0\n",
+      "32.0\n",
+      "13.0\n",
+      "27.0\n",
+      "36.0\n",
+      "20.0\n",
+      "0.0\n",
+      "33.0\n",
+      "39.0\n",
+      "18.0\n",
+      "46.0\n",
+      "27.0\n",
+      "19.0\n",
+      "36.0\n",
+      "29.0\n",
+      "30.0\n",
+      "0.0\n",
+      "40.0\n",
+      "29.0\n",
+      "26.0\n",
+      "0.0\n",
+      "0.0\n",
+      "23.0\n",
+      "0.0\n",
+      "37.0\n",
+      "27.0\n",
+      "0.0\n",
+      "32.0\n",
+      "27.0\n",
+      "23.0\n",
+      "17.0\n",
+      "0.0\n",
+      "37.0\n",
+      "20.0\n",
+      "18.0\n",
+      "0.0\n",
+      "37.0\n",
+      "33.0\n",
+      "41.0\n",
+      "41.0\n",
+      "22.0\n",
+      "0.0\n",
+      "0.0\n",
+      "39.0\n",
+      "24.0\n",
+      "44.0\n",
+      "32.0\n",
+      "39.0\n",
+      "41.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "26.0\n",
+      "31.0\n",
+      "0.0\n",
+      "48.0\n",
+      "27.0\n",
+      "23.0\n",
+      "0.0\n",
+      "31.0\n"
+     ]
+    }
+   ],
    "source": [
     "# path to file: \"datasets/pima_indians_diabetes.csv\". The first row of the .csv contains the column names.\n",
     "# Note that in the \"Outcome\" column, 0 denotes someone that does NOT have diabetes, and 1 denotes someone that does.  \n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "df= pd.read_csv(\"datasets/pima_indians_diabetes.csv\")\n",
+    "df\n",
+    "target =df['Outcome']\n",
+    "data =df.drop('Outcome', axis=1)\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row[3])"
    ]
   }
  ],
